Added lodash, file-loader for images and prop-types.

--- a/src/test.scss
+++ b/src/test.scss
@@ -1,3 +1,5 @@
 .red {
-    background-color: red;
+    color: red;
+    background: url("./images/dog.jpg") no-repeat center center;
+    min-height: 100px;
 }
