--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,3 +1,6 @@
 .button {
-  font-size: 16px;
+  font-size: 24px;
+  color: white;
+  height: 100px;
+  background: url("../images/dog.jpg") no-repeat center center;
 }
