--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,6 +1,5 @@
 .button {
+  background: url('../images/dog.jpg') no-repeat center center;
   font-size: 24px;
-  color: white;
   height: 100px;
-  background: url("../images/dog.jpg") no-repeat center center;
 }
