--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,5 @@
 @import '../../node_modules/include-media/dist/include-media';
-@import './includes/colors';
+@import './includes/color';
 @import './includes/core';
-@import './includes/extends';
-@import './includes/mixins';
+@import './includes/extend';
+@import './includes/mixin';
