--- a/src/styles/includes/color.scss
+++ b/src/styles/includes/color.scss
@@ -1,7 +1,69 @@
 $colors: (
+  'deep-pink': #ff1493,
+  'salmon': #fa8072,
+  'crimson': #dc143c,
   'red': #ff0000,
+  'tomato': #ff6347,
+  'orange': #ffa500,
+  'yellow': #ffff00,
+  'gold': #ffd700,
+  'moccasin': #ffe4b5,
+  'tan': #d2b48c,
+  'chocolate': #d2691e,
+  'brown': #a52a2a,
+  'spring-green': #00ff7f,
+  'medium-sea-green': #3cb371,
+  'green': #008000,
+  'aqua': #00ffff,
+  'turquoise': #40e0d0,
+  'teal': #008080,
+  'sky-blue': #87ceeb,
+  'dodger-blue': #1e90ff,
+  'blue': #0000ff,
+  'lavender': #e6e6fa,
+  'violet': #eeb2ee,
+  'fuchsia': #ff00ff,
+  'purple': #800080,
   'white': #ffffff,
+  'snow': #fffafa,
+  'beige': #f5f5dc,
+  'light-gray': #d3d3d3,
+  'silver': #c0c0c0,
+  'gray': #808080,
+  'slate-gray': #708090,
+  'black': #000000,
 );
 
+$deep-pink: map-get($colors, 'deep-pink');
+$salmon: map-get($colors, 'salmon');
+$crimson: map-get($colors, 'crimson');
 $red: map-get($colors, 'red');
+$tomato: map-get($colors, 'tomato');
+$orange: map-get($colors, 'orange');
+$yellow: map-get($colors, 'yellow');
+$gold: map-get($colors, 'gold');
+$moccasin: map-get($colors, 'moccasin');
+$tan: map-get($colors, 'tan');
+$chocolate: map-get($colors, 'chocolate');
+$brown: map-get($colors, 'brown');
+$spring-green: map-get($colors, 'spring-green');
+$medium-sea-green: map-get($colors, 'medium-sea-green');
+$green: map-get($colors, 'green');
+$aqua: map-get($colors, 'aqua');
+$turquoise: map-get($colors, 'turquoise');
+$teal: map-get($colors, 'teal');
+$sky-blue: map-get($colors, 'sky-blue');
+$dodger-blue: map-get($colors, 'dodger-blue');
+$blue: map-get($colors, 'blue');
+$lavender: map-get($colors, 'lavender');
+$violet: map-get($colors, 'violet');
+$fuchsia: map-get($colors, 'fuchsia');
+$purple: map-get($colors, 'purple');
 $white: map-get($colors, 'white');
+$snow: map-get($colors, 'snow');
+$beige: map-get($colors, 'beige');
+$light-gray: map-get($colors, 'light-gray');
+$silver: map-get($colors, 'silver');
+$gray: map-get($colors, 'gray');
+$slate-gray: map-get($colors, 'slate-gray');
+$black: map-get($colors, 'black');
