--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,39 +1,44 @@
 @import '../../styles/base';
 
 .container {
-  @extend %rounded-border;
-  align-items: center;
-  background-color: $dodger-blue;
-  border: 3px solid $blue;
   display: flex;
-  padding: 10px;
 
-  .text {
-    color: $white;
-    font-size: $font-size-large;
-    font-weight: $font-weight-bold;
-  }
+  button {
+    @extend %rounded-border;
+    align-items: center;
+    background-color: $dodger-blue;
+    border: 3px solid $blue;
+    display: flex;
+    padding: 10px;
 
-  .iconRight {
-    color: $white;
-    font-size: $font-size-large;
-    margin-left: 10px;
-  }
+    .text {
+      color: $white;
+      font-size: $font-size-large;
+      font-weight: $font-weight-bold;
+    }
 
-  .iconLeft {
-    color: $white;
-    font-size: $font-size-large;
-    margin-right: 10px;
-  }
-
-  &:hover {
-    background-color: $white;
-    transition: background-color .25s ease;
-
-    .text,
-    .iconLeft,
     .iconRight {
-      color: $dodger-blue;
+      color: $white;
+      font-size: $font-size-large;
+      margin-left: 10px;
+    }
+
+    .iconLeft {
+      color: $white;
+      font-size: $font-size-large;
+      margin-right: 10px;
+    }
+
+    &:hover {
+      background-color: $white;
+      cursor: pointer;
+      transition: background-color .25s ease;
+
+      .text,
+      .iconLeft,
+      .iconRight {
+        color: $dodger-blue;
+      }
     }
   }
 
