--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -5,32 +5,60 @@
   flex-direction: column;
 
   .list {
+    @extend %rounded-border;
     background-color: $white-smoke;
     border: 3px solid $blue;
+    display: flex;
+    flex-flow: column;
     list-style: none;
     margin: 0 0 10px;
     padding: 10px;
   }
 
   .listItem {
-    font-size: $font-size-normal;
-    font-weight: $font-weight-bold;
+    display: flex;
+    flex-flow: column;
     padding: 5px;
+    width: 100%;
   }
 
-  .listItem + .listItem {
+  .listItemGroup {
+    align-items: center;
+    display: flex;
+  }
+
+  .listItemGroup + .listItemGroup {
     border-top: 1px solid $silver;
   }
 
-  .addIcon {
-    color: $blue;
+  .listItemCompleted {
+    opacity: .5;
+  }
+
+  .title {
+    font-size: $font-size-extra-large;
+    font-weight: $font-weight-extra-bold;
+  }
+
+  .details {
+    color: $slate-gray;
+    font-size: $font-size-normal;
+    font-weight: $font-weight-bold;
+  }
+
+  .completedIcon {
+    color: $green;
     font-size: $font-size-large;
-    margin-right: 10px;
+    margin: 0 0 0 10px;
+  }
+
+  .deleteIcon {
+    color: $red;
+    font-size: $font-size-large;
+    margin: 0 10px 0 0;
 
     &:hover {
-      color: $red;
       cursor: pointer;
-      transition: background-color .25s ease;
     }
   }
 
