--- a/src/components/ListItem/ListItem.scss
+++ b/src/components/ListItem/ListItem.scss
@@ -9,6 +9,10 @@
     flex-flow: column;
     padding: 5px;
     width: 100%;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .listItemCompleted {
