--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -22,4 +22,11 @@
     text-align: center;
   }
 
+  .hr {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, .75), rgba(0, 0, 0, 0)); //sass-lint:disable-line no-color-literals
+    border: 0;
+    height: 1px;
+    margin: 0 0 10px;
+  }
+
 }
