--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -30,3 +30,27 @@
   }
 
 }
+
+.listIconDetail {
+  color: $blue;
+  font-size: 24px;
+  position: absolute;
+  right: 10px;
+  top: 0;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.listIconCompleted {
+  color: $blue;
+  font-size: 16px;
+  position: absolute;
+  right: 35px;
+  top: 4px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
