--- a/src/components/ListItem/ListItem.scss
+++ b/src/components/ListItem/ListItem.scss
@@ -15,25 +15,24 @@
     }
   }
 
-  .listItemCompleted {
-    opacity: .5;
-  }
-
   .title {
     font-size: $font-size-extra-large;
     font-weight: $font-weight-extra-bold;
+    user-select: none;
   }
 
   .details {
     color: $slate-gray;
     font-size: $font-size-normal;
     font-weight: $font-weight-bold;
+    user-select: none;
   }
 
   .completedIcon {
     color: $green;
     font-size: $font-size-large;
     margin: 0 0 0 10px;
+    text-align: right;
   }
 
   .deleteIcon {
