--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -11,8 +11,67 @@
     display: flex;
     flex-flow: column;
     list-style: none;
-    margin: 0 0 10px;
-    padding: 20px;
+    padding: 15px;
+
+    &:hover > .detailRow {
+      opacity: .5;
+
+      &.detailRow:hover { //sass-lint:disable-line force-pseudo-nesting
+        opacity: 1;
+      }
+    }
+
+    .detailRow + .detailRow {
+      border-top: 1px solid $silver;
+    }
+
+    .detailRow {
+
+      &:last-of-type {
+        margin: 0 0 -10px;
+      }
+    }
+
+    .headerRow {
+      align-items: center;
+      border-bottom: 3px solid $blue;
+      display: flex;
+      justify-content: flex-end;
+      margin: -10px 0 5px;
+
+      .itemCount {
+        color: $blue;
+        font-size: $font-size-large;
+        font-weight: $font-weight-bold;
+        margin: 0 20px 0 0;
+      }
+
+      .iconDetail {
+        color: $blue;
+        font-size: 28px;
+        margin: 0 20px 0 0;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      .iconCompleted {
+        color: $blue;
+        font-size: 18px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+    }
+
+    .headerRowAllCompleted {
+      border-bottom: 0 none;
+      margin-bottom: -10px;
+    }
+
   }
 
   .noItems {
@@ -29,28 +88,4 @@
     margin: 0 0 10px;
   }
 
-}
-
-.listIconDetail {
-  color: $blue;
-  font-size: 24px;
-  position: absolute;
-  right: 25px;
-  top: 0;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.listIconCompleted {
-  color: $blue;
-  font-size: 16px;
-  position: absolute;
-  right: 50px;
-  top: 4px;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
